download images to show in the app - fix showing info messages - fix dialog scroll overflow

--- a/registrants/src/UI/embc-registrant/src/app/core/components/dialog-components/information-dialog/information-dialog.component.scss
+++ b/registrants/src/UI/embc-registrant/src/app/core/components/dialog-components/information-dialog/information-dialog.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+}
+
 .button-width {
   min-width: 40%;
 }
